@@ -1,3 +1,7 @@
+Oct 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- move definition of PACKAGE_DATA_DIR to Makefile.am as recommended in autoconf
+  docu
+
 Oct 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - additional gametypes for RTCW and ET mods. Thanks Ben Winslow for
   the patch
